--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\ren-jing\\AppData\\Local\\Temp\\ipykernel_500\\3685750969.py:9: is_gpu_available (from tensorflow.python.framework.test_util) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\ren-jing\\AppData\\Local\\Temp\\ipykernel_12364\\3284721901.py:12: is_gpu_available (from tensorflow.python.framework.test_util) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use `tf.config.list_physical_devices('GPU')` instead.\n"
      ]
@@ -34,7 +34,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,9 +45,12 @@
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "import martix\n",
+    "\n",
     "tf.test.is_gpu_available()\n",
     "\n"
    ]
@@ -61,24 +64,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(21613, 21)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'dataframeName'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\CodeData\\111-1_tfproject\\lab2\\lab2.ipynb Cell 5\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/CodeData/111-1_tfproject/lab2/lab2.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mkc_house_data.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/CodeData/111-1_tfproject/lab2/lab2.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m martix\u001b[39m.\u001b[39;49mplotCorrelationMatrix(data,\u001b[39m8\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/CodeData/111-1_tfproject/lab2/lab2.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# 顯示dataset的形狀，共21613比資料，每一比資料有21種不同資訊。\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/CodeData/111-1_tfproject/lab2/lab2.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m data\u001b[39m.\u001b[39mshape\n",
+      "File \u001b[1;32md:\\CodeData\\111-1_tfproject\\lab2\\..\\martix.py:37\u001b[0m, in \u001b[0;36mplotCorrelationMatrix\u001b[1;34m(df, graphWidth)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mplotCorrelationMatrix\u001b[39m(df, graphWidth):\n\u001b[1;32m---> 37\u001b[0m     filename \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49mdataframeName\n\u001b[0;32m     38\u001b[0m     df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mdropna(\u001b[39m'\u001b[39m\u001b[39mcolumns\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m# drop columns with NaN\u001b[39;00m\n\u001b[0;32m     39\u001b[0m     df \u001b[39m=\u001b[39m df[[col \u001b[39mfor\u001b[39;00m col \u001b[39min\u001b[39;00m df \u001b[39mif\u001b[39;00m df[col]\u001b[39m.\u001b[39mnunique() \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m]] \u001b[39m# keep columns where there are more than 1 unique values\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\ren-jing\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\generic.py:5575\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5568\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   5569\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   5570\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   5571\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   5572\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5573\u001b[0m ):\n\u001b[0;32m   5574\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> 5575\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'dataframeName'"
+     ]
     }
    ],
    "source": [
     "data = pd.read_csv(\"kc_house_data.csv\")\n",
+    "data.dataframeName=\"kc_house_data.csv\"\n",
+    "martix.plotCorrelationMatrix(data,8)\n",
     "# 顯示dataset的形狀，共21613比資料，每一比資料有21種不同資訊。\n",
     "data.shape"
    ]
@@ -1602,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1612,24 +1620,11 @@
       "The tensorboard extension is already loaded. To reload it, use:\n",
       "  %reload_ext tensorboard\n"
      ]
-    }
-   ],
-   "source": [
-    "# 這行指令可以幫助我們直接在jupyter notebook上顯示TensorBoard\n",
-    "%load_ext tensorboard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 9530 (pid 9880), started 0:10:33 ago. (Use '!kill 9880' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 15932), started 0:00:41 ago. (Use '!kill 15932' to kill it.)"
       ]
      },
      "metadata": {},
@@ -1639,11 +1634,59 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-aa77c8a20f747237\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-d41f34f1fc3a1150\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-aa77c8a20f747237\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-d41f34f1fc3a1150\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 這行指令可以幫助我們直接在jupyter notebook上顯示TensorBoard\n",
+    "%load_ext tensorboard \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 9530 (pid 9880), started 1 day, 11:14:22 ago. (Use '!kill 9880' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-fc10ff988bd04c44\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-fc10ff988bd04c44\");\n",
        "          const url = new URL(\"http://localhost\");\n",
        "          const port = 9530;\n",
        "          if (port) {\n",
@@ -3724,16 +3767,6 @@
     "y_pred = np.reshape(y_pred * std['price'] + mean['price'], y_test.shape)\n",
     "percentage_error = np.mean(np.abs(y_test - y_pred)) / np.mean(y_test) * 100\n",
     "print(\"Model_4: {:.2f}%\".format(percentage_error))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %load_ext tensorboard\n",
-    "# %tensorboard --logdir lab2-logs\n"
    ]
   }
  ],
