--- a/lab4/Lab4.ipynb
+++ b/lab4/Lab4.ipynb
@@ -435,13 +435,13 @@
    ],
    "source": [
     "# 將train Data重新分成1:9等分，分別分給valid data, train data\n",
-    "valid_split, train_split = tfds.Split.TRAIN.subsplit([10, 90])\n",
+    "valid_split, train_split = ['train[:90%]','train[90%:]']\n",
     "# 取得訓練數據，並順便讀取data的資訊\n",
-    "train_data, info = tfds.load(\"cifar10\", split=train_split, with_info=True, data_dir='/home/share/dataset/tensorflow-datasets')\n",
+    "train_data, info = tfds.load(\"cifar10\", split=train_split, with_info=True)\n",
     "# 取得驗證數據\n",
-    "valid_data = tfds.load(\"cifar10\", split=valid_split, data_dir='/home/share/dataset/tensorflow-datasets')\n",
+    "valid_data = tfds.load(\"cifar10\", split=valid_split)\n",
     "# 取得測試數據\n",
-    "test_data = tfds.load(\"cifar10\", split=tfds.Split.TEST, data_dir='/home/share/dataset/tensorflow-datasets')"
+    "test_data = tfds.load(\"cifar10\", split='test')"
    ]
   },
   {
