--- a/lab5/Lab5.ipynb
+++ b/lab5/Lab5.ipynb
@@ -875,7 +875,7 @@
    ],
    "source": [
     "# 將train Data重新分成1:9等分，分別分給valid data, train data\n",
-    "valid_split, train_split = ['train[:90%]','train[90%:]']\n",
+    "train_split, valid_split = ['train[:90%]', 'train[90%:]']\n",
     "# 取得訓練數據，並順便讀取data的資訊\n",
     "train_data, info = tfds.load(\"cifar10\", split=train_split, with_info=True)\n",
     "# 取得驗證數據\n",
