--- a/run_in_colab.ipynb
+++ b/run_in_colab.ipynb
@@ -12,6 +12,42 @@
     "!pwd\n",
     "!git clone https://github.com/buddy53044/111-1_tfproject.git"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_split, train_split = ['[train[90%:]','train[:90%]']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_split, valid_split = ['train[:90%]', 'train[90%:]']\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 將train Data重新分成1:9等分，分別分給valid data, train data\n",
+    "valid_split, train_split = ['train[:90%]','train[90%:]']\n",
+    "# 取得訓練數據，並順便讀取data的資訊\n",
+    "train_data, info = tfds.load(\"cifar10\", split=train_split, with_info=True)\n",
+    "# 取得驗證數據\n",
+    "valid_data = tfds.load(\"cifar10\", split=valid_split)\n",
+    "# 取得測試數據\n",
+    "test_data = tfds.load(\"cifar10\", split='test')"
+   ]
   }
  ],
  "metadata": {
