--- a/lab7/Lab7.ipynb
+++ b/lab7/Lab7.ipynb
@@ -48,7 +48,75 @@
     "import matplotlib.pyplot as plt\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
-    "from preprocessing import parse_aug_fn, parse_fn"
+    "# from preprocessing import parse_aug_fn, parse_fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "def flip(x):\n",
+    "    \"\"\"\n",
+    "    flip image(翻轉影像)\n",
+    "    \"\"\"\n",
+    "    x = tf.image.random_flip_left_right(x)  # 隨機左右翻轉影像\n",
+    "    return x\n",
+    "\n",
+    "def color(x):\n",
+    "    \"\"\"\n",
+    "     Color change(改變顏色)\n",
+    "    \"\"\"\n",
+    "    x = tf.image.random_hue(x, 0.08)  # 隨機調整影像色調\n",
+    "    x = tf.image.random_saturation(x, 0.6, 1.6)  # 隨機調整影像飽和度\n",
+    "    x = tf.image.random_brightness(x, 0.05)  # 隨機調整影像亮度\n",
+    "    x = tf.image.random_contrast(x, 0.7, 1.3)  # 隨機調整影像對比度\n",
+    "    return x\n",
+    "\n",
+    "def rotate(x):\n",
+    "    \"\"\"\n",
+    "    Rotation image(影像旋轉)\n",
+    "    \"\"\"\n",
+    "    # 隨機選轉n次(通過minval和maxval設定n的範圍)，每次選轉90度\n",
+    "    x = tf.image.rot90(x, tf.random.uniform(shape=[], minval=1, maxval=4, dtype=tf.int32))\n",
+    "    return x\n",
+    "\n",
+    "def zoom(x, scale_min=0.6, scale_max=1.4):\n",
+    "    \"\"\"\n",
+    "    Zoom Image(影像縮放)\n",
+    "    \"\"\"\n",
+    "    h, w, c = x.shape\n",
+    "    scale = tf.random.uniform([], scale_min, scale_max)  # 隨機縮放比例\n",
+    "    sh = h * scale  # 縮放後影像長度\n",
+    "    sw = w * scale  # 縮放後影像寬度\n",
+    "    x = tf.image.resize(x, (sh, sw))  # 影像縮放\n",
+    "    x = tf.image.resize_with_crop_or_pad(x, h, w)  # 影像裁減和填補\n",
+    "    return x\n",
+    "\n",
+    "def parse_aug_fn(dataset):\n",
+    "    \"\"\"\n",
+    "    Image Augmentation(影像增強) function\n",
+    "    \"\"\"\n",
+    "    x = tf.cast(dataset['image'], tf.float32) / 255.  # 影像標準化\n",
+    "    x = flip(x)  # 隨機水平翻轉\n",
+    "    # 觸發顏色轉換機率50%\n",
+    "    x = tf.cond(tf.random.uniform([], 0, 1) > 0.5, lambda: color(x), lambda: x)\n",
+    "    # 觸發影像旋轉機率0.25%\n",
+    "    x = tf.cond(tf.random.uniform([], 0, 1) > 0.75, lambda: rotate(x), lambda: x)\n",
+    "    # 觸發影像縮放機率50%\n",
+    "    x = tf.cond(tf.random.uniform([], 0, 1) > 0.5, lambda: zoom(x), lambda: x)\n",
+    "    # 將輸出標籤轉乘One-hot編碼\n",
+    "    y = tf.one_hot(dataset['label'], 10)\n",
+    "    return x, y\n",
+    "\n",
+    "def parse_fn(dataset):\n",
+    "    x = tf.cast(dataset['image'], tf.float32) / 255.  # 影像標準化\n",
+    "    # 將輸出標籤轉乘One-hot編碼\n",
+    "    y = tf.one_hot(dataset['label'], 10)\n",
+    "    return x, y"
    ]
   },
   {
@@ -6711,7 +6779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
