--- a/lab9/Lab9.ipynb
+++ b/lab9/Lab9.ipynb
@@ -174,7 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21881c2da90>"
+       "<matplotlib.image.AxesImage at 0x1ad5182fa90>"
       ]
      },
      "execution_count": 5,
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -533,13 +533,14 @@
      "text": [
       "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "keras_layer (KerasLayer)     (None, 2048)              21802784  \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 128)               262272    \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 1)                 129       \n",
+      " keras_layer (KerasLayer)    (None, 2048)              21802784  \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 128)               262272    \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 1)                 129       \n",
+      "                                                                 \n",
       "=================================================================\n",
       "Total params: 22,065,185\n",
       "Trainable params: 262,401\n",
@@ -561,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,14 +668,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     73/Unknown - 9s 129ms/step - loss: 0.0174 - binary_accuracy: 0.9940"
+      "73/73 [==============================] - 146s 2s/step - loss: 0.0502 - binary_accuracy: 0.9819\n",
+      "73/73 [==============================] - 144s 2s/step - loss: 0.0119 - binary_accuracy: 0.9961\n"
      ]
     }
    ],
@@ -685,15 +687,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model_1 Prediction: 97.97413945198059%\n",
-      "Model_2 Prediction: 99.39655065536499%\n"
+      "Model_1 Prediction: 98.19432497024536%\n",
+      "Model_2 Prediction: 99.61307048797607%\n"
      ]
     }
    ],
@@ -704,16 +706,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.014224112"
+       "0.014187455177307129"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
